Transition VideoDecoder to new model

--- a/index.src.html
+++ b/index.src.html
@@ -637,8 +637,21 @@ callback VideoFrameOutputCallback = undefined(VideoFrame output);
 
 Internal Slots {#videodecoder-internal-slots}
 ---------------------------------------------
+: <dfn attribute for=VideoDecoder>[[control message queue]]</dfn>
+:: A [=queue=] of [=control messages=] to be performed upon this [=codec=]
+    instance. See [=[[control message queue]]=].
+: <dfn attribute for=VideoDecoder>[[message queue blocked]]</dfn>
+:: A boolean indicating when processing the
+    {{VideoDecoder/[[control message queue]]}} is blocked by a pending
+    [=control message=]. See [=[[message queue blocked]]=].
 : <dfn attribute for=VideoDecoder>[[codec implementation]]</dfn>
 :: Underlying decoder implementation provided by the User Agent.
+: <dfn attribute for=VideoDecoder>[[codec work queue]]</dfn>
+:: A [=parallel queue=] used for running parallel steps that reference the
+    {{VideoDecoder/[[codec implementation]]}}. See [=[[codec work queue]]=].
+: <dfn attribute for=VideoDecoder>[[codec saturated]]</dfn>
+:: A boolean indicating when the [[codec implementation]] is unable to accept
+    additional decoding work.
 : <dfn attribute for=VideoDecoder>[[output callback]]</dfn>
 :: Callback given at construction for decoded outputs.
 : <dfn attribute for=VideoDecoder>[[error callback]]</dfn>
@@ -663,12 +676,21 @@ Constructors {#videodecoder-constructors}
 <dfn constructor for=VideoDecoder title="VideoDecoder(init)">
   VideoDecoder(init)
 </dfn>
-1. Let d be a new VideoDecoder object.
-2. Assign `init.output` to the {{VideoDecoder/[[output callback]]}} internal slot.
-3. Assign `init.error` to the {{VideoDecoder/[[error callback]]}} internal slot.
-4. Assign `true` to {{VideoDecoder/[[key chunk required]]}}.
-5. Assign `"unconfigured"` to {{VideoDecoder/[[state]]}}.
-5. Return d.
+1. Let d be a new {{VideoDecoder}} object.
+2. Assign a new [=queue=] to {{VideoDecoder/[[control message queue]]}}.
+3. Assign `false` to {{VideoDecoder/[[message queue blocked]]}}.
+4. Assign `null` to {{VideoDecoder/[[codec implementation]]}}.
+5. Assign the result of starting a new [=parallel queue=] to
+    {{VideoDecoder/[[codec work queue]]}}.
+6. Assign `false` to {{VideoDecoder/[[codec saturated]]}}.
+7. Assign init.output to {{VideoDecoder/[[output callback]]}}.
+8. Assign init.error to {{VideoDecoder/[[error callback]]}}.
+9. Assign `null` to {{VideoDecoder/[[active decoder config]]}}.
+10. Assign `true` to {{VideoDecoder/[[key chunk required]]}}.
+11. Assign `"unconfigured"` to {{VideoDecoder/[[state]]}}
+12. Assign `0` to {{VideoDecoder/[[decodeQueueSize]]}}.
+13. Assign a new [=list=] to {{VideoDecoder/[[pending flush promises]]}}.
+14. Return d.
 
 Attributes {#videodecoder-attributes}
 -------------------------------------
@@ -696,17 +718,19 @@ Methods {#videodecoder-methods}
     chunks as described by |config|.
 
     NOTE: This method will trigger a {{NotSupportedError}} if the User Agent
-      does not support |config|. Authors are encouraged to first check support by
-      calling {{VideoDecoder/isConfigSupported()}} with |config|. User Agents
+      does not support |config|. Authors are encouraged to first check support
+      by calling {{VideoDecoder/isConfigSupported()}} with |config|. User Agents
       don't have to support any particular codec type or configuration.
 
     When invoked, run these steps:
     1. If |config| is not a [=valid VideoDecoderConfig=], throw a
         {{TypeError}}.
-    2. If {{VideoDecoder/[[state]]}} is `“closed”`, throw an {{InvalidStateError}}.
+    2. If {{VideoDecoder/[[state]]}} is `“closed”`, throw an
+        {{InvalidStateError}}.
     3. Set {{VideoDecoder/[[state]]}} to `"configured"`.
     4. Set {{VideoDecoder/[[key chunk required]]}} to `true`.
     5. [=Queue a control message=] to configure the decoder with |config|.
+    6. [=Process the control message queue=].
 
     [=Running a control message=] to configure the decoder means running
     these steps:
@@ -716,8 +740,14 @@ Methods {#videodecoder-methods}
         {{VideoDecoder/[[codec implementation]]}} with an implementation
         supporting |config|.
     3. Otherwise, run the <a>Close VideoDecoder</a> algorithm with
-        {{NotSupportedError}} and abort these steps.
-    4. Set {{VideoDecoder/[[active decoder config]]}} to `config`.
+        {{NotSupportedError}} and return `"processed"`.
+    4. Assign `true` to {{VideoDecoder/[[message queue blocked]]}}.
+    5. Enqueue the following steps to {{VideoDecoder/[[codec work queue]]}}:
+        1. Configure {{VideoDecoder/[[codec implementation]]}} with |config|.
+        2. Set {{VideoDecoder/[[active decoder config]]}} to `config`.
+        3. Assign `false` to {{VideoDecoder/[[message queue blocked]]}}.
+        4. [=Queue a task=] to [=Process the control message queue=].
+    6. Return `"processed"`.
   </dd>
 
   <dt><dfn method for=VideoDecoder>decode(chunk)</dfn></dt>
@@ -749,20 +779,31 @@ Methods {#videodecoder-methods}
             {{VideoDecoder/[[key chunk required]]}}.
     3. Increment {{VideoDecoder/[[decodeQueueSize]]}}.
     4. [=Queue a control message=] to decode the |chunk|.
+    5. [=Process the control message queue=].
 
     [=Running a control message=] to decode the chunk means performing these steps:
-    1. Attempt to use {{VideoDecoder/[[codec implementation]]}} to decode the
-        chunk.
-    2. If decoding results in an error, queue a task on the [=control thread=]
-        event loop to run the [=Close VideoDecoder=] algorithm with
-        {{EncodingError}}.
-    3. Queue a task on the [=control thread=] event loop to decrement
-        {{VideoDecoder/[[decodeQueueSize]]}}
-    4. Let |decoded outputs| be a [=list=] of decoded video data outputs emitted
-        by {{VideoDecoder/[[codec implementation]]}} in presentation order.
-    5. If |decoded outputs| is not empty, queue a task on the [=control thread=]
-        event loop to run the [=Output VideoFrames=] algorithm with
-        |decoded outputs|.
+    1. If {{VideoDecoder/[[codec saturated]]}} equals `true`, return `"not
+        processed"`.
+    2. If decoding chunk will cause the
+        {{VideoDecoder/[[codec implementation]]}} to become [=saturated=],
+        assign `true` to {{VideoDecoder/[[codec saturated]]}}.
+    3. Decrement {{VideoDecoder/[[decodeQueueSize]]}}.
+    4. Enqueue the following steps to the {{VideoDecoder/[[codec work queue]]}}:
+        1. Attempt to use {{VideoDecoder/[[codec implementation]]}} to decode
+            the chunk.
+        2. If decoding results in an error, [=queue a task=] to run the
+            [=Close VideoDecoder=] algorithm with {{EncodingError}} and return.
+        3. If {{VideoDecoder/[[codec saturated]]}} equals `true` and
+            {{VideoDecoder/[[codec implementation]]}} is no longer
+            [=saturated=], [=queue a task=] to perform the following steps:
+                1. Assign `false` to {{VideoDecoder/[[codec saturated]]}}.
+                2. [=Process the control message queue=].
+        4. Let |decoded outputs| be a [=list=] of decoded video data outputs
+            emitted by {{VideoDecoder/[[codec implementation]]}} in
+            presentation order.
+        5. If |decoded outputs| is not empty, [=queue a task=] to run the
+            [=Output VideoFrame=] algorithm with |decoded outputs|.
+    5. Return `"processed"`.
   </dd>
 
   <dt><dfn method for=VideoDecoder>flush()</dfn></dt>
@@ -775,22 +816,24 @@ Methods {#videodecoder-methods}
         [=a promise rejected with=] {{InvalidStateError}} {{DOMException}}.
     2. Set {{VideoDecoder/[[key chunk required]]}} to `true`.
     3. Let |promise| be a new Promise.
-    4. [=Queue a control message=] to flush the codec with |promise|.
-    5. Append |promise| to {{VideoDecoder/[[pending flush promises]]}}.
-    6. Return |promise|.
+    4. Append |promise| to {{VideoDecoder/[[pending flush promises]]}}.
+    5. [=Queue a control message=] to flush the codec with |promise|.
+    6. [=Process the control message queue=].
+    7. Return |promise|.
 
-    [=Running a control message=] to flush the codec means performing these steps
-        with |promise|.
-    1. Signal {{VideoDecoder/[[codec implementation]]}} to emit all [=internal
-        pending outputs=].
-    2. Let |decoded outputs| be a [=list=] of decoded video data outputs emitted
-        by {{VideoDecoder/[[codec implementation]]}}.
-    3. If |decoded outputs| is not empty, queue a task on the [=control thread=]
-        event loop to run the [=Output VideoFrames=] algorithm with
-        |decoded outputs|.
-    4. Queue a task on the [=control thread=] event loop to run these steps:
-        1. Remove |promise| from {{VideoDecoder/[[pending flush promises]]}}.
-        2. Resolve |promise|.
+    [=Running a control message=] to flush the codec means performing these
+    steps with |promise|.
+    1. Enqueue the following steps to the {{VideoDecoder/[[codec work queue]]}}:
+        1. Signal {{VideoDecoder/[[codec implementation]]}} to emit all
+            [=internal pending outputs=].
+        2. Let |decoded outputs| be a [=list=] of decoded video data outputs
+            emitted by {{VideoDecoder/[[codec implementation]]}}.
+        3. [=Queue a task=] to perform these steps:
+            1. If |decoded outputs| is not empty, run the [=Output VideoFrame=]
+                algorithm with |decoded outputs|.
+            2. Remove |promise| from
+                {{VideoDecoder/[[pending flush promises]]}}.
+            3. Resolve |promise|.
   </dd>
 
   <dt><dfn method for=VideoDecoder>reset()</dfn></dt>
@@ -882,7 +925,8 @@ Algorithms {#videodecoder-algorithms}
     2. Set {{VideoDecoder/state}} to `"unconfigured"`.
     3. Signal {{VideoDecoder/[[codec implementation]]}} to cease producing
         output for the previous configuration.
-    4. Remove all [=control messages=] from the [=control message queue=].
+    4. Remove all [=control messages=] from the
+        {{VideoDecoder/[[control message queue]]}}.
     5. Set {{VideoDecoder/[[decodeQueueSize]]}} to zero.
     6. For each |promise| in {{VideoDecoder/[[pending flush promises]]}}:
         1. Reject |promise| with |exception|.
@@ -895,9 +939,8 @@ Algorithms {#videodecoder-algorithms}
     2. Set {{VideoDecoder/state}} to `"closed"`.
     3. Clear {{VideoDecoder/[[codec implementation]]}} and release associated
         [=system resources=].
-    4. If |exception| is not an {{AbortError}} {{DOMException}}, queue a task on
-        the [=control thread=] event loop to invoke the
-        {{VideoDecoder/[[error callback]]}} with |exception|.
+    4. If |exception| is not an {{AbortError}} {{DOMException}},
+        [=queue a task=] to invoke the {{VideoDecoder/[[error callback]]}} with |exception|.
   </dd>
 </dl>
 
